# BitSearch

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  publish.yml  release.yml
bie/: __init__.py  _async_utils.py  _asyncutil.py  chunker.py  cli.py  config.py  crawler.py  discovery.py  engine.py  extract.py  index.py  models.py  query_expansion.py  quicksearch.py  security.py  server.py  sitecrawl.py  sitemap.py
bie/integrations/: __init__.py  langchain.py
bie/mcp/: __init__.py  server.py
bie/spiders/: __init__.py  generic.py
bitsearch_intelligence_engine.egg-info/: PKG-INFO  requires.txt
docs/: API.md
examples/: basic_search.py  extract_page.py  map_and_crawl.py  reusable_index.py  web_search.py
tests/: test_async_utils.py  test_asyncutil.py  test_chunker.py  test_crawler.py  test_crawler_notebook_safe.py  test_crawler_request_patch.py  test_discovery.py  test_discovery_error_handling.py  test_discovery_errors.py  test_engine.py  test_extract.py  test_index.py  test_query_expansion.py  test_quicksearch.py  test_security.py  test_sitecrawl.py  test_sitemap.py  test_spider_relevance.py  test_websearch_response.py
