[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bits-bie"
version = "0.3.0"
description = "BitSearch Intelligence Engine — real-time, citation-backed web search & extraction for AI apps. Built on Bitscrape."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Sudharsan SM" }
]
keywords = [
    "search",
    "rag",
    "llm",
    "ai-agents",
    "web-crawler",
    "scraping",
    "mcp",
    "model-context-protocol",
    "bitscrape",
    "information-retrieval",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "bitscrape>=0.1.6",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "click>=8.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.2",
]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]
mcp = [
    "mcp>=1.0",
]
all = [
    "bits-bie[embeddings,server,mcp]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/Sudharsansm/BIE"
Repository = "https://github.com/Sudharsansm/BIE"
Issues = "https://github.com/Sudharsansm/BIE/issues"
"Bitscrape (core crawler)" = "https://github.com/Sudharsansm/Bitscrape"

[project.scripts]
bie = "bie.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["bie"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
